@@ -2787,6 +2787,12 @@ impl Signature {
 
     /// Verifies an attested key signature on a user id.
     ///
+    /// This feature is [experimental](crate#experimental-features).
+    ///
+    /// Allows the certificate owner to attest to third party
+    /// certifications. See [Section 5.2.3.30 of RFC 4880bis] for
+    /// details.
+    ///
     /// `self` is the attested key signature, `signer` is the key that
     /// allegedly made the signature, `pk` is the primary key, and
     /// `userid` is the user id.
@@ -2802,7 +2808,9 @@ impl Signature {
     /// key is not revoked, not expired, has a valid self-signature,
     /// has a subkey binding signature (if appropriate), has the
     /// signing capability, etc.
-    pub(crate) fn verify_userid_attestation<P, Q, R>(
+    ///
+    ///   [Section 5.2.3.30 of RFC 4880bis]: https://tools.ietf.org/html/draft-ietf-openpgp-rfc4880bis-10.html#section-5.2.3.30
+    pub fn verify_userid_attestation<P, Q, R>(
         &mut self,
         signer: &Key<P, R>,
         pk: &Key<Q, key::PrimaryRole>,
@@ -2812,9 +2820,7 @@ impl Signature {
               Q: key::KeyParts,
               R: key::KeyRole,
     {
-        use crate::types::SignatureType__AttestedKey;
-
-        if self.typ() != SignatureType__AttestedKey {
+        if self.typ() != SignatureType::AttestationKey {
             return Err(Error::UnsupportedSignatureType(self.typ()).into());
         }
 
@@ -2912,6 +2918,12 @@ impl Signature {
 
     /// Verifies an attested key signature on a user attribute.
     ///
+    /// This feature is [experimental](crate#experimental-features).
+    ///
+    /// Allows the certificate owner to attest to third party
+    /// certifications. See [Section 5.2.3.30 of RFC 4880bis] for
+    /// details.
+    ///
     /// `self` is the attested key signature, `signer` is the key that
     /// allegedly made the signature, `pk` is the primary key, and
     /// `ua` is the user attribute.
@@ -2927,7 +2939,9 @@ impl Signature {
     /// key is not revoked, not expired, has a valid self-signature,
     /// has a subkey binding signature (if appropriate), has the
     /// signing capability, etc.
-    pub(crate) fn verify_user_attribute_attestation<P, Q, R>(
+    ///
+    ///   [Section 5.2.3.30 of RFC 4880bis]: https://tools.ietf.org/html/draft-ietf-openpgp-rfc4880bis-10.html#section-5.2.3.30
+    pub fn verify_user_attribute_attestation<P, Q, R>(
         &mut self,
         signer: &Key<P, R>,
         pk: &Key<Q, key::PrimaryRole>,
@@ -2937,9 +2951,7 @@ impl Signature {
               Q: key::KeyParts,
               R: key::KeyRole,
     {
-        use crate::types::SignatureType__AttestedKey;
-
-        if self.typ() != SignatureType__AttestedKey {
+        if self.typ() != SignatureType::AttestationKey {
             return Err(Error::UnsupportedSignatureType(self.typ()).into());
         }
 
